[package]
name = "pallet-nftaa"
description = "NFT as an Account pallet"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }

# Substrate Runtime
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true

sp-runtime.workspace = true

pallet-nfts = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }

pallet-balances = { workspace = true, default-features = true }
enumflags2 = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-balances/std",
    "pallet-utility/std",
    "pallet-nfts/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-nfts/try-runtime",
]
